app/styles/app.css
* {
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

textarea {
  min-height: 4em;
}

[href='#']:not([data-ember-action]), .not-ready {
  opacity: 0.3;
  pointer-events: none;
}

.page-content--scroll {
  scroll-behavior: smooth;
}

.flex-wrap {
  flex-wrap: wrap;
}

.pointer {
  cursor: pointer;
}

.btn {
  height: auto;
  min-height: 2rem;
}

.text-right {
  text-align: right !important;
}

.page-content > .nav-side--sub {
  display: flex;
  border-radius: 4px;
}

.page-content > .nav-side--sub .nav-side-header-title {
  display: block;
  font-size: 2rem;
  text-align: center;
  flex-grow: 1;
  margin-top: 0.5rem;
}

.page-content > .nav-side--sub .nav-side-body {
  overflow-y: visible;
}

.liquid-container {
  overflow: visible;
}

.liquid-container, .liquid-child {
  display: flex;
  flex-grow: 1;
  flex-direction: column;
}

.liquid-modal {
  z-index: 10;
}

.lf-dialog {
  padding-top: 1rem;
  padding-bottom: 1rem;
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 5px rgba(255,255,255,.3);
}

.dialog-content {
  max-height: calc(100vh - 5rem);
  overflow: auto;
  margin-bottom: 1rem;
}

.dialog-content--small {
  font-size: smaller;
}

.dialog-footer {
  height: 2rem;
  display: flex;
  justify-content: flex-end
}

.block {
  display: block;
}

dt, dd {
  display: inline;
}

dt {
  font-weight: 700;
}

dt::before {
  display: block;
  content: '';
}

dt::after {
  content: ':';
}

dd {
  margin: 0;
}

dd + dd::before {
  content: ', ';
}

/* Slimmer subnav */
.nav-side--sub .nav-side-list {
  padding-right: 0.5rem;
}

.nav-side--sub .nav-side-list-item > a {
  padding-left: 0.75rem;
  padding-right: 0.75rem;
}

.nav-side--sub .nav-side-body {
  font-size: 1rem;
}

.text-danger {
  color: rgb(217, 83, 79);
}

.text-warning {
  color: rgb(240, 173, 78);
}

.text-success {
  color: rgb(92, 184, 92);
}

